--- a/helm/openwhisk/values.yaml
+++ b/helm/openwhisk/values.yaml
@@ -262,6 +262,9 @@ invoker:
   options: ""
   jvmHeapMB: "512"
   jvmOptions: ""
+  env: 
+    - name: ""
+      value: ""
   containerFactory:
     useRunc: false
     impl: "kubernetes"
